[gd_scene load_steps=11 format=3 uid="uid://das2o8dsafvw3"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_jfu1m"]
[ext_resource type="PackedScene" uid="uid://e6kupyu3uco4" path="res://Scenes/Paddle/paddle.tscn" id="1_jj3h5"]
[ext_resource type="PackedScene" uid="uid://xsm2nf3lgo0n" path="res://Scenes/wall.tscn" id="2_5t3lj"]
[ext_resource type="Script" path="res://Scenes/Paddle/enemy_paddle.gd" id="2_orbiw"]
[ext_resource type="PackedScene" uid="uid://bw5krfpua7k72" path="res://Scenes/Ball/ball.tscn" id="3_w2p8l"]
[ext_resource type="PackedScene" uid="uid://vvttoin4ngxq" path="res://Final.tscn" id="6_eta8n"]
[ext_resource type="Texture2D" uid="uid://qp2hcgo5q336" path="res://elementGlass012.png" id="6_h2a4q"]
[ext_resource type="PackedScene" uid="uid://csn4ssq1ll01r" path="res://Scenes/UI/ui.tscn" id="8_v8jww"]
[ext_resource type="AudioStream" uid="uid://bhaa74xhr5fo6" path="res://Flowing Rocks.ogg" id="9_slofp"]
[ext_resource type="PackedScene" uid="uid://c3t1d73s8xh0p" path="res://Scenes/pause_menu.tscn" id="10_qxgtw"]

[node name="main" type="Node2D"]
script = ExtResource("1_jfu1m")

[node name="Paddle" parent="." instance=ExtResource("1_jj3h5")]
position = Vector2(-1000, 2.08165e-12)
gravity_scale = 2.66454e-15

[node name="EnemyPaddle" parent="." instance=ExtResource("1_jj3h5")]
position = Vector2(1000, 0)
gravity_scale = 2.66454e-15
script = ExtResource("2_orbiw")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
zoom = Vector2(0.4, 0.4)

[node name="Walls" type="Node" parent="."]

[node name="BottomWall" parent="Walls" instance=ExtResource("2_5t3lj")]
z_index = -1
position = Vector2(10, 600)
rotation = 1.5708
scale = Vector2(1, 9)

[node name="Ball" parent="." groups=["ball"] instance=ExtResource("3_w2p8l")]
z_index = -1

[node name="Line2D" type="Line2D" parent="."]
texture_repeat = 2
position = Vector2(-1, -614)
points = PackedVector2Array(0, 0, 0, 1200)
width = 32.0
texture = ExtResource("6_h2a4q")
texture_mode = 1

[node name="LeftEdge" parent="." instance=ExtResource("6_eta8n")]
position = Vector2(-1142, 0)

[node name="RightEdge" parent="." instance=ExtResource("6_eta8n")]
position = Vector2(1143, 45)

[node name="UI" parent="." instance=ExtResource("8_v8jww")]
layer = 2

[node name="PauseMenu" parent="UI" instance=ExtResource("10_qxgtw")]
visible = false
offset_left = 982.0
offset_top = 467.0
offset_right = 982.0
offset_bottom = 467.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_slofp")
autoplay = true

[node name="TopWall" parent="." instance=ExtResource("2_5t3lj")]
position = Vector2(10, -600)
rotation = 1.5708
scale = Vector2(1, 9)

[connection signal="point_scored" from="LeftEdge" to="." method="enemy_scored"]
[connection signal="point_scored" from="RightEdge" to="." method="player_scored"]
